# phonetics

./: .gitignore  .rubocop.yml  .travis.yml  Gemfile  Makefile  README.md  Rakefile  a.out  phonetics.gemspec
.github/workflows/: ci.yml  gempush.yml  publish.yml  test.yml
ext/c_levenshtein/: extconf.rb  levenshtein.c  next_phoneme_length.c  phonemes.c  phonemes.h  phonetic_cost.c  phonetic_cost.h
lib/: phonetic_levenshtein.rb  phonetics.rb
lib/phonetics/: c_levenshtein.bundle  code_generator.rb  distances.rb  levenshtein.rb  ruby_levenshtein.rb  transcriptions.rb  version.rb
python/: .gitignore  Cargo.toml  app.py  collect_transcriptions.sh  pyproject.toml  setup.py
python/phonetics_ipa/: __init__.py
python/src/: lib.rs
ruby/: .gitignore  .rubocop.yml  CHANGELOG  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  LICENSE.txt  Rakefile  phonetics.gemspec
ruby/ext/c_levenshtein/: levenshtein.c  next_phoneme_length.h  phonemes.c  phonetic_cost.h
ruby/lib/phonetics/: code_generator.rb  levenshtein.rb  transcriptions.rb
ruby/spec/: spec_helper.rb
ruby/spec/support/: levenshtein_shared_example.rb
spec/: phonetic_levenshtein_spec.rb  phonetics_spec.rb  spec_helper.rb
spec/phonetics/: levenshtein_spec.rb  multibyte_encoding_spec.rb  performance_spec.rb  ruby_levenshtein_spec.rb  transcriptions_spec.rb
spec/support/: levenshtein_shared_example.rb
