[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipa_levenshtein"
version = "0.5.0"
description = "Phonetic transcriptions and phonetic Levenshtein distance"

authors = [
    { name = "Jack Danger", email = "github@jackdanger.com" }
]
license = { file = 'NON-AI-MIT' }
#readme = "README.md"
keywords = ["python", "IPA", "phonetics", "transcription", "levenshtein"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
  "pytest"
]
dev = [
 "ipa2",
 "torch",
 "torchvision",
 "torchtext",
 "numpy",
]

[tool.setuptools.packages]
find = { where = ["ipa_levenshtein"] }

